# Commitment-

./: .env  .env.development  .env.example  .env.production  .env.production.template  .env.smartmatch.example  .force-deploy  .gitignore  .pre-commit-config.yaml  API_GATEWAY_VALIDATION.md  CHANGELOG-SUPERSMARTMATCH.md  CHANGELOG.md  CLEANUP-REPORT.md  CLEANUP_COMPLETED.md  CLEANUP_GUIDE.md  CLEANUP_PROGRESS.md  CLEANUP_RAPPORT.md  CLEANUP_SUMMARY.md  DELETE_matching_engine.py  DELETE_matching_engine_enhanced.py  DELETE_matching_engine_reverse.py  DEPLOYED.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_SUMMARY.md  DEPLOY_GUIDE.md  DEPLOY_STATUS.md  DOCKER_FIX.md  Dockerfile  Dockerfile.cv-parser-v2  Dockerfile.job-parser-v2  Dockerfile.matching-api  Dockerfile.nexten  Dockerfile.supersmartmatch-v2  Dockerfile.v1  Dockerfile.v2  DÉCOUVERTES_FORMATS_PARSERS.md  FINALIZATION_GUIDE.md  FINAL_DEPLOYMENT_GUIDE.md  FIX-JOB-PARSER.md  FIX-QUESTIONNAIRE-CANDIDAT.md  (+498 more)
airflow_dags/: commitment_training_dag.py
analysis/: __init__.py  behavioral_analysis.py  feedback_analyzer.py  metrics_calculator.py  ml_feedback_loop.py  pattern_detection.py  preference_scoring.py
analysis_session8/: __init__.py  analyzer.py  patterns.py  preferences.py
api/: INTEGRATION.md  README.md  __init__.py  consent_api.py  events_api.py  feedback_api.py  requirements.txt  user_profile_api.py
app/: README.md  __init__.py  compat.py  data_loader.py  google_maps_client.py  init_ab_testing.py  insight_generator.py  semantic_analysis.py  smartmatch.py
architecture-v2/: ADRs.md  API-Specification-OpenAPI.yml  C4-Architecture-Diagrams.md  CICD-Pipeline.yml  Database-Schema.md  Implementation-Roadmap.md  Infrastructure-as-Code.tf  Security-Model.md
backend/: .env  .env.example  .gitignore  Aptfile  BACKEND_GUIDE.md  Dockerfile  README-SUPERSMARTMATCH-VERSIONS.md  README.md  alembic.ini  api.py  app.py  cv_parser.py  cv_parser_optimizer.py  docker-compose.yml  enhanced_cv_parser.py  health_app.py  job_parser_api.py  job_parser_service.py  package.json  parsing_service.py  preload_models.py  requirements.docker.txt  requirements.local.txt  requirements.txt  run.py  server.js  setup_nlp.py  setup_spacy_models.py  start-backend.bat  start-backend.sh  super_smart_match.py  super_smart_match_v2_nexten_integration.py  super_smart_match_v3.py  test_cv_optimization.py  test_full_pipeline.py  test_pdf_parser.py  test_real_integration.py  test_server.py  train_xgboost_model.py  unified_matching_service.py
backup/: ab_testing_example.json
backup_cleanup_20250618_144056/: api-matching-advanced.py  api-matching-enhanced-v2.py
backup_local_changes/: docker-compose.basic.yml  test-infrastructure.sh  validation_config.json
config/: prometheus.yml  supersmartmatch-v2-production.env
configs/: feature-flags.yml
constraints/: constraint_validator.py  performance_constraints.py
css/: organization-improvements.css
cv-parser-service/: .env  Dockerfile  README-ENHANCED-CV.md  README-ENHANCED-PARSING.md  README-TEST.md  README.md  compat.py  config.py  main.py  metrics.py  preload_models.py  requirements.txt  test_cv_enhanced.py  test_enhanced_parser.py  test_parser_simple.py  worker.py
cv-parser-v2/: Dockerfile  app.py  format_detector.py  package.json  requirements.txt
dashboard/: __init__.py  data_connectors.py  performance_monitors.py  visualizations.py
data-adapter/: Dockerfile  GAPS-ANALYSIS.md  QUESTIONNAIRES_INTEGRATION.md  QUESTIONNAIRE_INTEGRATION.md  README.md  api_matching.py  data_adapter.py  docker-compose.override.yml  flask_api.py  frontend-examples.json  requirements-fastapi.txt  requirements.txt  requirements_fastapi.txt  smartmatch_data_adapter.py  test_api.py  test_integration.py
database/: 01_schema_creation.sql  02_indexes_and_optimizations.sql  03_functions_and_procedures.sql  04_matching_functions.sql  05_security_and_roles.sql  06_initial_data.sql  07_advanced_optimizations.sql  08_tracking_extensions.sql  08_tracking_schema.sql  09_behavioral_analysis_schema.sql  15_behavioral_analysis_schema.sql  16_personalization_schema.sql  README.md  database_schema.md  postgresql.conf.sample
docs/: JOB_PARSER_CHATGPT_GUIDE.md  JOB_PARSER_GUIDE.md  METRICS-IMPLEMENTATION.md  MICROSERVICES_ARCHITECTURE.md  PARSER_CV_OPTIMISE.md  PARSER_MULTIPAGE_FIX.md  PROMPT2_DOCUMENTATION.md  PROMPT2_TECHNICAL_DOCUMENTATION.md  PROMPT_2_PARSERS_ULTRA_OPTIMISES.md  RAPPORT_FINAL_PARSER_MULTIPAGE.md  TECHNICAL_DOCUMENTATION.md  algorithme-compatibilite-semantique.md  ameliorations-UI-UX.md  api-integration.md  cicd-guide.md  commute-optimization.md  development-setup.md  feedback_system.md  fix-parsing-multipage-documentation.md  form-prefiller-documentation.md  monitoring-guide.md  nexten-complete-documentation.md  runbook-operations.md  session-summary-20-juin-2025.md  tracking-integration-guide.md
document-service/: Dockerfile  auth.py  config.py  database.py  expiration.py  main.py  models.py  requirements.txt  schemas.py  security.py  storage.py  worker.py
feedback_service/: Dockerfile  Dockerfile.simple  __init__.py  analyzer.py  models.py  predictor.py  requirements.txt  run.py  simple_app.py  wsgi.py
frontend/: .env  .env.example  Dockerfile  README.md  next.config.js  package-lock.json  package.json
gateway/: Dockerfile  config.py  requirements.txt
job-parser-service/: Dockerfile  Dockerfile.fix  Dockerfile.new  Dockerfile.simple  MODIFICATIONS.md  README-fix.md  README.md  build_and_test_new.sh  config.py  entrypoint.sh  fastapi_job_parser.py  fix-indentation.sh  fix-logging-config.sh  gpt_parser_api.py  job_parser_gpt.py  main.py  preload_models.py  pydantic_compat.py  requirements.txt  start-gpt-api.sh  test_local_pdf.py  test_pydantic_compat.py  worker.py
job-parser-v2/: Dockerfile  app.py  requirements.txt  text_extractor.py
js/: choice-card-fix.js  choice-cards-fix.js  commitment-initializer.js  cv-parser-connector.js  display-recruitment-process.js  fade-fix.js  gpt-integration.js  gpt-parser-client.js  job-parser-api-gpt.js  job-parser-api.js  job-parser-connector.js  job-parser-gpt.js  job-preview.js  (+13 more)
(+1393 files in other folders)
